syntax = "proto3";
package replication;

option csharp_namespace = "Replication.Protobuf";

message AddMessage {
  int32 replicaId = 1;
  int32 typeId = 2;
  bytes replica = 3;
}

message RemoveMessage {
  int32 replicaId = 1;
}

message RemoteCallMessage {
  int32 functionId = 1;
  int32 typeId = 2;
  bytes argument = 3;
}

message UpdateMessage {
  int32 replicaId = 1;
  bytes replica = 2;
}

message ReplicationMessage {
  message ActionMessage {
    oneof value {
	  AddMessage add = 1;
	  RemoveMessage remove = 2;
	  RemoteCallMessage remoteCall = 3;
	}
  }
  repeated ActionMessage actions = 1;
  repeated UpdateMessage updates = 2;
}

